Pie menu performs multiple actions at the same time if it appears near the edge of screen and hotkey is used #122526

Closed
opened 2024-05-31 03:55:06 +02:00 by Shyy-Anzr · 2 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 516.94

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-05-24 09:39, hash: d960b922b311
Broken: 3.6
Worked: Never. Got sick of it.

Short description of error
I use Shift+S menu for moving 3D cursor to object and objects to 3D cursor. When I do it in split viewport(like Shading tab) where there is a very little space, the pie menu appears near the edge of screen and behaves unreliably: it performs additional unwanted action that corresponds to the choice the mouse is pointing at, even if I don't press any mouse buttons. For example, if I make it pop up at the left edge of screen, the button "Cursor To Grid" falls under the mouse pointer and highlighted. Now, no matter what keyboard button I press, it will do the highlighted "Cursor To Grid" first and then the action corresponding to the keyboard button second. So, if I press 7 for "Selection To Cursor", it will first align the 3D cursor to grid and then move the selection to unwanted location.

Exact steps for others to reproduce the error

  1. Place 3D cursor somewhere, preferably at location not aligned with the grid to make the effect obvious.
  2. Select the Default Cube with the intent to move it to the 3D cursor.
  3. Move the mouse pointer to the left edge of the screen(assuming default viewport layout)
  4. Press Shift+S. Observe that the leftmost element "Cursor To Grid" of the menu is highlighted as it is near mouse pointer.
  5. Press 7 on keyboard to move the Default Cube to 3D cursor. Observe that 3D cursor moved itself and thus cube appeared at slightly wrong location.
  6. Check the Undo History. It says "Snap Cursor To Grid" and then "Snap Selection To Cursor" last, indicating multiple actions got performed.

If you blinked at 5 you may have missed it as adjustment of 3D cursor to grid may be subtle. To make it really egregious and obvious try this:

  1. Press Shift+S. Move the mouse pointer a bit down to "Cursor To World Origin" but don't press the mouse buttons.
  2. Press 7 on keyboard to move the Default Cube to 3D cursor. Observe that both 3D cursor and Cube got moved to the world origin.
**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 516.94 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-05-24 09:39, hash: `d960b922b311` Broken: 3.6 Worked: Never. Got sick of it. **Short description of error** I use Shift+S menu for moving 3D cursor to object and objects to 3D cursor. When I do it in split viewport(like Shading tab) where there is a very little space, the pie menu appears near the edge of screen and behaves unreliably: it performs additional unwanted action that corresponds to the choice the mouse is pointing at, even if I don't press any mouse buttons. For example, if I make it pop up at the left edge of screen, the button "Cursor To Grid" falls under the mouse pointer and highlighted. Now, no matter what keyboard button I press, it will do the highlighted "Cursor To Grid" first and then the action corresponding to the keyboard button second. So, if I press 7 for "Selection To Cursor", it will first align the 3D cursor to grid and then move the selection to unwanted location. **Exact steps for others to reproduce the error** 1. Place 3D cursor somewhere, preferably at location not aligned with the grid to make the effect obvious. 2. Select the Default Cube with the intent to move it to the 3D cursor. 3. Move the mouse pointer to the left edge of the screen(assuming default viewport layout) 4. Press Shift+S. Observe that the leftmost element "Cursor To Grid" of the menu is highlighted as it is near mouse pointer. 5. Press 7 on keyboard to move the Default Cube to 3D cursor. Observe that 3D cursor moved itself and thus cube appeared at slightly wrong location. 6. Check the Undo History. It says "Snap Cursor To Grid" and then "Snap Selection To Cursor" last, indicating multiple actions got performed. If you blinked at 5 you may have missed it as adjustment of 3D cursor to grid may be subtle. To make it really egregious and obvious try this: 4. Press Shift+S. Move the mouse pointer a bit down to "Cursor To World Origin" but don't press the mouse buttons. 5. Press 7 on keyboard to move the Default Cube to 3D cursor. Observe that both 3D cursor and Cube got moved to the world origin.
Shyy-Anzr added the
Severity
Normal
Status
Needs Triage
Type
Report
labels 2024-05-31 03:55:06 +02:00
Member

Can confirm.

Can confirm.
Philipp Oeser added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-05-31 17:05:25 +02:00
Member

Possible fix is up, see !122567 (bit on shaky ground though if this is the correct solution...)

Possible fix is up, see !122567 (bit on shaky ground though if this is the correct solution...)
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-06-06 11:09:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#122526
No description provided.